--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- navbar start -->
          <nav class="navbar navbar-expand-lg navbar-light nav">
           <div class="container-fluid p-0">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <img src="images/logo.png" class="img-fluid logo" alt="ActiveBox">
             </a>
             <button class="navbar-toggler nav_tog" type="button" data-bs-toggle="collapse" data-bs-target="#nav_s_con" aria-controls="nav_s_con" aria-expanded="false" aria-label="Toggle navigation">
